Fix platform icon centering and popover z-index

--- a/resources/assets/css/components/pieces/popover.less
+++ b/resources/assets/css/components/pieces/popover.less
@@ -4,7 +4,7 @@
 
     > .positioned-element {
       position: absolute;
-      z-index: 1;
+      z-index: 3;
 
       &.top {
         top: 0;
